Initial commit: Containerized Georgia Salaries application with S3 integration

--- a/app/.dockerignore
+++ b/app/.dockerignore
@@ -1,3 +1,7 @@
+# Git
+.git
+.gitignore
+
 # Python
 __pycache__/
 *.py[cod]
@@ -39,9 +43,4 @@ venv_new/
 !requirements.txt
 
 # Logs
-*.log
-
-# OS
-.DS_Store
-
-To-Do.txt
+*.log 
